--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     
     repositories {
@@ -7,11 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -26,4 +21,16 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+ext {
+    daggerVersion       = "2.14.1"
+    retrofitVersion     = "2.3.0"
+    okHttpVersion       = "3.9.1"
+    rxJavaVersion       = "2.1.8"
+    rxAndroidVersion    = "2.0.2"
+    supportLibVersion   = "27.1.1"
+    archVersion         = "1.1.1"
+    roomVersion         = "1.1.1"
+    stethoVersion       = "1.5.0"
+    constraintVersion   = "1.1.3"
 }
